Changelog
=========

0.2.0 (2010-xx-xx)
------------------

* query_subelement view documentation was incomplete [keul]
* when querying empty folder, do not prevent browser default action [keul]
* management of browser cache (mainly Internet Explorer) [keul]
* dot not display always the content image icon (sometimes users don't see them in navigation) [keul]
* now every element node cache its subtree so AJAX call is performed only once [keul]

0.1.0 (2010-04-06)
------------------

* initial release
